--- a/pixel-art/index.html
+++ b/pixel-art/index.html
@@ -14,6 +14,7 @@
 	<script src="main.js" defer></script>
 	
 	<link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' stroke='%236b7280' fill='none' stroke-linecap='round' stroke-width='2' stroke-linejoin='round'%3e%3cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3e%3cpolyline points='6 21 21 6 18 3 3 18 6 21' /%3e%3cline x1='15' y1='6' x2='18' y2='9' /%3e%3cpath d='M9 3a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2' /%3e%3cpath d='M19 13a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2' /%3e%3c/svg%3e" type="image/x-icon">
 
     <title>Paint a Pixel</title>
 </head>
