add etherscan link

--- a/pixel-art/index.html
+++ b/pixel-art/index.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+    <a id="etherscan" href="https://goerli.etherscan.io/address/0x0a44F15417a5a438a1bdE9674aeA8e8722801eCc" target="_blank">View on Etherscan</a>
     <button id="theme" onclick="$('body').toggleClass('dark-theme')">Dark Theme</button>
 
     <h1>Paint a Pixel</h1>
