--- a/nft-w10/index.html
+++ b/nft-w10/index.html
@@ -33,7 +33,7 @@
             <img src="img/5.png" alt="Purin">
         </div>
 
-        <button id="enter">Mint & Start</button>
+        <button id="enter">Enter</button>
     </div>
 
     <div id="board">
