--- a/pixel-art/index.html
+++ b/pixel-art/index.html
@@ -15,46 +15,47 @@
 	<script src="main.js" defer></script>
 	
 	<link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' stroke='%236b7280' fill='none' stroke-linecap='round' stroke-width='2' stroke-linejoin='round'%3e%3cpath stroke='none' d='M0 0h24v24H0z' fill='none'/%3e%3cpolyline points='6 21 21 6 18 3 3 18 6 21' /%3e%3cline x1='15' y1='6' x2='18' y2='9' /%3e%3cpath d='M9 3a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2' /%3e%3cpath d='M19 13a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2' /%3e%3c/svg%3e" type="image/x-icon">
+    <link rel="shortcut icon" href="https://api.iconify.design/ph:paint-brush.svg?color=Black" type="image/x-icon">
 
     <title>Paint a Pixel</title>
 </head>
 
 <body>
-    <a id="etherscan" href="https://goerli.etherscan.io/address/0x0a44F15417a5a438a1bdE9674aeA8e8722801eCc" target="_blank">View on Etherscan</a>
     <button id="theme" onclick="$('body').toggleClass('dark-theme')">Dark Theme</button>
 
     <h1>Paint a Pixel</h1>
-    <div id="canvas"></div>
-    <div>
-        <label for="colorpicker">Choose Color:</label>
-        <input id="colorpicker" type="color">
-    </div>
+
+    <main>
+        <div class="side"></div>
+        <div>
+            <div id="canvas"></div>
+            <div>
+                <label for="colorpicker">Choose Color:</label>
+                <input id="colorpicker" type="color">
+            </div>
+        </div>
+        <div class="side" id="transaction">
+            <p>Color: <span id="color"></span></p>
+            <p>Painter: <span id="painter"></span></p>
+            <p>Price for repainting:</p>
+            <p id="repaint"><span id="repaint-price"></span> MATIC</p>
+        </div>
+    </main>
+
     <button id="submit">Paint!</button>
 
     <div class="bg"></div>
-
-    <div class="popup" id="transaction">
-        <div>
-            <img src="https://web.archive.org/web/20090901183809/http://www.geocities.com/myhappyhistory05/Face/Weak.gif" alt="sad face">
-            <p>This pixel is already painted by another user (<span id="owner">0xD0E...9716</span>), you have to pay them to repaint the pixel.</p>
-        </div>
-        <p>Price for repainting: <span id="repaint-price">0.001 ETH</span></p>
-        <button id="confirm-t" onclick="$('#transaction, .bg').hide()">Confirm</button>
-        <button id="cancel-t" onclick="$('#transaction, .bg').hide()">Cancel</button>
-    </div>
 
     <div class="popup" id="setprice">
         <div>
             <img src="https://web.archive.org/web/20090901183809/http://www.geocities.com/myhappyhistory05/Face/Happy.gif" alt="happy face">
             <p>You successfully painted the pixel! Now you can set the price for other people to paint over. It can be up to twice of the price you paid:</p>
         </div>
-        <input id="price" type="number" value="0" min="0" step="0.0001"><span>ETH</span>
-        <button id="confirm-s" onclick="$('#setprice, .bg').hide()">Confirm</button>
+        <input id="price" type="number" value="0" min="0.01" step="0.01"><span>MATIC</span>
+        <button id="confirm" onclick="$('#setprice, .bg').hide()">Confirm</button>
     </div>
 
     <div class="mockup">
-        <button id="p1" onclick="$('#transaction, .bg').toggle()">mockup1</button>
         <button id="p2" onclick="$('#setprice, .bg').toggle()">mockup2</button>
     </div>
 </body>
